updating index.html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <hr title="Secret message">
 
 <main class="importantbox">
-    This is an important box
+    This is a not so important box
     <div class="importantbox">
         This is called nesting; .importantbox inside .importantbox
 
@@ -36,7 +36,7 @@
 </main>
 
 <!-- Remember when we talked about request-response-->
-<!-- This form will send a GIT request-->
+<!-- This form will send a GET request-->
 
 <form action="https://ddh.gg" method="get" class="importantbox">
     <input name="q" placeholder="Input search string">
