Modified index.html and other-page.html

--- a/other-page.html
+++ b/other-page.html
@@ -12,6 +12,8 @@
             <div>🌟</div>
             <div  id="backend">backend</div>
         </main>
+
+        <a href="index.html">Home</a>
     </body>
 
 </html>
